--- a/aleksandar/sass/abstracts/_mixins.scss
+++ b/aleksandar/sass/abstracts/_mixins.scss
@@ -5,3 +5,53 @@
         clear: both;
     }
 }
+
+@mixin absCenter {
+    position :absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+// MEDIA QUERY MANAGER
+
+
+/*
+0-600px: PHONE
+600-900px: TABLET portrait
+900-1200px: TABLET landscape
+[1200 -1800]: normal styles
+1800px + : big desktop
+
+Breakpoint argument choices:
+-phone
+-tab-port
+-tab-land
+-big-desktop
+
+ORDER:base + typography > general layout + grid > page layout > components
+
+1em = 16px 
+*/
+@mixin respond($breakpoint) {
+    @if $breakpoint == phone {
+        @media (max-width:37.5em) {  //600px
+            @content;
+        }
+    }
+    @if $breakpoint == tab-port {
+        @media (max-width:56.25em) {  //900px
+            @content;
+        }
+    }
+    @if $breakpoint == tab-land {
+        @media (max-width:75em) { //1200px
+            @content;
+        }
+    }
+    @if $breakpoint == big-desktop {  //1800px
+        @media (min-width:112.5em) {
+            @content;
+        }
+    }
+}
