--- a/aleksandar/sass/base/_base.scss
+++ b/aleksandar/sass/base/_base.scss
@@ -7,11 +7,31 @@
 }
 
 html {
-
      // This defines what 1rem is   
-    font-size: 62.5%;
+    font-size: 62.5%;  //10px 
+
+    @include respond(tab-land){
+        font-size: 56.25%;
+    }
+
+    @include respond(tab-port){
+        font-size: 50%; //1 rem = 9px
+    }
+
+    @include respond(big-desktop){
+        font-size: 75%;
+    }
+
+
 }
 
 body {
     box-sizing: border-box;
+    padding:3rem;
+
+
+    @include respond(tab-port){
+        padding:0;
+    }
+    
 }
